# claw-router

./: .dockerignore  .gitignore  Dockerfile  README.md  run.sh  verify_frontend.py
backend/: Cargo.toml
backend/src/: cache.rs  config.rs  handlers.rs  lib.rs  main.rs  router.rs  scorer.rs  state.rs
backend/tests/: chat_completions.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Dashboard.tsx  Logs.tsx  Settings.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
