[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
regex = "1"
sha2 = "0.10"
aidapter = "0.0.2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
axum-test = "18.7.0"
tempfile = "3.25.0"
tower = "0.5.3"
wiremock = "0.5"
